[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desi-traffic"
version = "0.1.0"
description = "DesiTraffic OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "pydantic",
    "openai"
]

[project.scripts]
server = "server:app"
