[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "desi-traffic"
version = "0.1.0"
description = "DesiTraffic OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"
